# CQPy

./: .clang-format  .gitignore  CMakeLists.txt  CQP.pyi  MANIFEST.in  README.md  app.json  requirements.txt  setup.py
cqpy/: __init__.py  _callback.py  _embed.pyi  bootstrap.py  cqp.py  events.py  log.py  tutorial.py  types.py
scripts/: install.ps1
src/: api.cpp  api.hpp  compatible.hpp  cqapi.cpp  cqapi.hpp  cqpy.cpp  cqpy.hpp  embed.cpp  embed_api.cpp  events.cpp  events.hpp  logging.hpp  macro.hpp  menu.cpp
